# natoma-subconscious

./: .gitignore  AGENTS.md  LICENSE  README.md
docs/: ideas.md  natoma-setup.md  prizes.md
python/: .env.example  README.md  agent.py  pyproject.toml
python/docs/: ui-streamlit.md
python/src/: graph.py  mcp.py  model.py  tools.py
typescript/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
typescript/docs/: ui-nextjs.md
typescript/src/: agent.ts  graph.ts  mcp.ts  model.ts  tools.ts
