[project]
name = "natoma-subconscious-agent"
version = "0.1.0"
description = "Hackathon starter: a CLI agent powered by Subconscious + Natoma MCPs."
requires-python = ">=3.11"
dependencies = [
    "langchain==1.3.0",
    "langgraph==1.2.0",
    "langchain-openai==1.2.1",
    "langchain-mcp-adapters==0.2.2",
    "python-dotenv==1.2.2",
    "streamlit==1.45.1",
]

[tool.uv]
package = false
